# AICITY2024_Track2_AliOpenTrek_CityLLaVA

./: .gitignore  README.md  block_expansion_llava_1_6.py  pyproject.toml
checkpoints/: README.md
data_preprocess/: add_stage_prompt.py  best_view_selection.py  check_image.py  chose_best_view_test.py  draw_bbox_on_frame.py  extract_bdd_frame_bbox_anno.py  extract_bdd_test_frame_bbox_anno.py  extract_wts_frame_bbox_anno.py  extract_wts_test_frame_bbox_anno.py  filiter_data_by_area.py  generate_test_frames.py  prepare_data.sh  prepare_data_test.sh  prepare_data_train.sh  shortQA_merge.py  shortQA_split.py  transform_llava_format.py
llava/: conversation.py  mm_utils.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py
llava/serve/: batch_inference_block.py  cli_final.py
llava/train/: train.py  train_block.py  train_mem_block.py
scripts/: finetune_block_bigsmall.sh  finetune_task_lora.sh  finetune_task_sft.sh  inference.sh  zero2_offload.json  zero3.json
